# co-scientist-mcp-public

./: .gitignore  README.md
apps/local-mcp/: pyproject.toml
apps/local-mcp/co_scientist_local/: __main__.py  guide.py  image_gen.py  manuscript.py  mcp_server.py  skills_install.py  ssh.py  state.py  util.py  version_check.py
apps/local-mcp/co_scientist_local/skills/analysis-run/: SKILL.md
apps/local-mcp/co_scientist_local/skills/news-short/: SKILL.md
apps/local-mcp/co_scientist_local/skills/paper-deck/: SKILL.md
apps/local-mcp/co_scientist_local/skills/paper-deck/reference_corpus/gallery/: manifest.json
apps/local-mcp/co_scientist_local/skills/paper-export/: SKILL.md
apps/local-mcp/co_scientist_local/skills/paper-review/: SKILL.md
apps/local-mcp/co_scientist_local/skills/paper-revision/: SKILL.md
apps/local-mcp/co_scientist_local/skills/paper-writing/: SKILL.md
apps/local-mcp/co_scientist_local/skills/reconcile-reviews/: SKILL.md
apps/local-mcp/co_scientist_local/skills/science-short/: SKILL.md
apps/local-mcp/co_scientist_local/skills/scientific-image/: SKILL.md
apps/local-mcp/co_scientist_local/skills/supplementary-material/: SKILL.md
apps/local-mcp/co_scientist_local/skills/video-dub/: SKILL.md
apps/local-mcp/co_scientist_local/skills/video-harness/: SKILL.md
apps/local-mcp/co_scientist_local/skills/video-publish/: SKILL.md
apps/local-mcp/co_scientist_local/skills/video-revision/: SKILL.md
apps/local-mcp/co_scientist_local/tools/: activity.py  affiliations.py  analyses.py  assets.py  authors.py  csl.py  deck_render.py  decks.py  display_lint.py  docx_export.py  exports.py  feedback.py  figure_lint.py  figures.py  images.py  imports.py  limits.py  manuscript_lint.py  materials.py  memory.py  papers.py  plan.py  references.py  reorder.py  reviews.py  runs.py  secrets.py  sections.py  servers.py  slide_patterns.py  slide_render_helpers.py  ssh_ops.py  tables.py  todos.py  videos.py  workdirs.py  youtube.py
docs/: setup-user.md
